infra/appset/default/headlamp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: lamp.cdxker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haedlamp
            port: 
              number: 80
